Support @DisableConstraints type inheritance